# thirty-back

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  secrets.json
entity/: Cargo.toml
entity/src/: fridge.rs  fridge_product.rs  fridge_product_join.rs  lib.rs  prelude.rs  product.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230422_085708_create_fridge.rs  m20230422_085918_create_product.rs  m20230422_085923_create_fridge_product_join.rs  main.rs
src/: main.rs  open_api_response.rs
src/api/: barcode.rs  fridges.rs  mod.rs  products.rs
src/config/: server.rs
src/responses/: fridges.rs  mod.rs  products.rs
