[package]
name = "thirty-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schemars = { version = "0.8.10" }
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }

serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
simple_logger = "4"

securestore = "0.100.0"
entity = { path = "entity" }
migration = { path = "migration" }




[dependencies.sea-orm]
version = "^0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-mysql",
  "with-chrono",
  # "with-json",
  # "debug-print",
  # "macros",
]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"
features = ["rocket_okapi"] #enables rocket_okapi so to have open api features enabled
