[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
schemars = { version = "0.8.10", features = ['chrono'] }
regex = "1.8.1"
lazy_static = "1.4.0"


[dependencies.sea-orm]
version = "^0"
features = [
  "with-chrono",
]